--- a/package.json
+++ b/package.json
@@ -8,15 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "@reduxjs/toolkit": "^1.7.1",
+    "react-redux": "^7.2.6",
+    "redux-devtools-extension": "^2.13.9",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.4"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/react-dom": "^17.0.11",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "postcss-preset-env": "^7.3.1",
+    "tailwindcss": "^3.0.18",
     "typescript": "4.5.5"
   }
 }
